deploy/canary/deployment-canary.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-deployment-canary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-app-canary
  template:
    metadata:
      labels:
        app: hello-app-canary
    spec:
      containers:
        - name: hello
          image: simplerest:v2
          ports:
            - name: web
              containerPort: 8000
          livenessProbe:
            httpGet:
              port: 8000
              path: /
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 2
          readinessProbe:
            httpGet:
              port: 8000
              path: /health
            initialDelaySeconds: 10
            periodSeconds: 5
